<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AMET</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_regisrto2">Registro Multa</string>
    <string name="title_activity_registro3">Registro3</string>
    <string name="title_activity_pagina">Paginas</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="Nacimiento"></string>
    <string name="title_activity_consulta_datos">ConsultaDatos</string>
    <string name="codigoMultado">Código</string>
    <string name="fechaActual">"Fecha: "</string>
    <string name="lugarCita">Lugar de la cita:</string>
    <string name="direccioncita">"Dirección: "</string>
    <string name="nombreMulta">Nombre:</string>
    <string name="identidad">Doc. Identidad:</string>
    <string name="nacionality">Nacionalidad:</string>
    <string name="placano">No. Placa:</string>
    <string name="tipove">Tipo Vehículo:</string>
    <string name="hecholugar">Lugar del hecho:</string>
    <string name="agenteno">No. Agente:</string>
    <string name="zonano">No. Zona:</string>
    <string name="gruaficha">Ficha grúa:</string>
    <string name="inffraccion">Infracción:</string>
    <string name="vehiculoalcohol">¿Alcohol en el vehículo?</string>
    <string name="alcohoemiaprueba">Prueba Alcohoemia:</string>
    <string name="codigoagente">Código</string>
    <string name="nombreradio">Nombre</string>
    <string name="agenteradio">Agente</string>
    <string name="multar2">Multar</string>
    <string name="rojoverde">Parpadea en rojo y verde.</string>
    <string name="naranjaverde">Parpadea en naranja y verde.</string>
    <string name="naranjarojo">Parpadea en naranja y rojo</string>
    <string name="naranjaverde2">Colores naranja y verde.</string>
    <string name="verde">Color Verde</string>
    <string name="resultado">Resultado prueba de alcohoemia</string>
    <string name="switchAlcohol"></string>
    <string name="bebidaDentro">¿Bebidas dentro del vehículo?</string>
    <string name="ley241"></string>
    <string name="modificaciones">modificaciones (comentario):</string>
    <string name="laley241">Infracción a la ley 241 y sus</string>
    <string name="datosvehiculo">Datos del vehículo</string>
    <string name="infraccion241"></string>
    <string name="placaNo"></string>
    <string name="tipovehiculo2"></string>
    <string name="modelovehiculo2"></string>
    <string name="noplaca2">"No. Placa:      "</string>
    <string name="tipocehiculo4">Tipo:</string>
    <string name="modeloauto">"Modelo:     "</string>
    <string name="otrosDatos2">Otros datos</string>
    <string name="lugardelhecho">Lugar del hecho:</string>
    <string name="agenteno7">No. Agente:</string>
    <string name="zonaliugat">Zona</string>
    <string name="remolcadogrua">¿Remolcado por grúa?</string>
    <string name="fichagrua8">No. Ficha:</string>
    <string name="gruaswitch"></string>
    <string name="lugarhecho9"></string>
    <string name="txtagenteNo"></string>
    <string name="zonatxtno"></string>
    <string name="txtgruano"></string>
    <string name="autoridad234">Autoridad Metropolitana de Transporte</string>
    <string name="fechaCita98">Fecha de la cita:</string>
    <string name="lugarhecho78"></string>
    <string name="txtDireccion34"></string>
    <string name="datosconductor89">Datos conductor:</string>
    <string name="nacionality67">Nacionalidad:</string>
    <string name="licencia34">No. Licencia</string>
    <string name="dominicano">¿Es dominicano?</string>
    <string name="licenciaConducir">¿Licencia de conducir?</string>
    <string name="nombre907">Nombre:</string>
    <string name="direccion377">Dirección:</string>
    <string name="lugar56">Lugar:</string>
    <string name="datosCita8">Datos de cita</string>
    <string name="digitalclock67">DigitalClock</string>
    <string name="txtAgente76"></string>
    <string name="lugardelhecho87"></string>
    <string name="modeloAuto4"></string>
    <string name="nombreradio09">Nombre</string>
    <string name="codigoradio">Código</string>
    <string name="agenteradio87">Agente</string>
    <string name="txtxBusqueda"></string>
    <string name="multaregistrar45">Registrar Multa</string>
    <string name="consultarmulta">Consultar Multa</string>
    <string name="titulogeneral">Autoridad Metropolitana de Transporte</string>

</resources>
