<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.itla.proyectoprogramacion2.ActividadPrincipal$SegundoFragmento"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/txtAutoridad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/datosvehiculo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtPlaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/placaNo" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fechaCita"
        android:layout_alignBottom="@+id/fechaCita"
        android:layout_alignLeft="@+id/txtPlaca"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tipovehiculo2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtAutoridad"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/noplaca2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Datosconductor"
        android:layout_below="@+id/Datosconductor"
        android:layout_marginTop="16dp"
        android:text="@string/zonaliugat"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_centerVertical="true"
        android:text="@string/lugardelhecho"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/Datosconductor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="19dp"
        android:text="@string/agenteno7"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/txtZona"
        android:layout_marginTop="20dp"
        android:text="@string/remolcadogrua"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/fechaCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/txtPlaca"
        android:layout_marginTop="15dp"
        android:text="@string/tipocehiculo4"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fechaCita"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="20dp"
        android:text="@string/fichagrua8"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtGrua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView9"
        android:layout_toRightOf="@+id/Datosconductor"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtgruano" />

    <Switch
        android:id="@+id/grua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtGrua"
        android:layout_alignRight="@+id/txtGrua"
        android:text="@string/gruaswitch"
        android:textOff="No"
        android:textOn="Sí" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fechaCita"
        android:layout_below="@+id/txtTipo"
        android:layout_marginTop="14dp"
        android:text="@string/modeloauto"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtAgente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Datosconductor"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtAgente76" />

    <EditText
        android:id="@+id/txtZona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/textView7"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/zonatxtno" />

    <EditText
        android:id="@+id/txtLugarDelHecho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lugardelhecho87" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/otrosDatos2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtModeloAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/txtTipo"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/modeloAuto4" />

</RelativeLayout>