<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="edu.itla.proyectoprogramacion2.Registro3"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/multar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/multar2"
            android:textColor="@android:color/primary_text_light"
            android:textColorLink="@android:color/holo_green_dark" />

        <EditText
            android:id="@+id/txtInfraccion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="86dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="2" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

    <TextView
        android:id="@+id/txtAutoridad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/laley241"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAutoridad"
        android:layout_centerHorizontal="true"
        android:text="@string/modificaciones"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Switch
        android:id="@+id/switchAlcohol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fechaCita"
        android:layout_centerHorizontal="true"
        android:text="@string/switchAlcohol"
        android:textOff="No"
        android:textOn="Sí" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchAlcohol"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/resultado"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioOpcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/fechaCita"
        android:layout_below="@+id/textView4" >

        <RadioButton
            android:id="@+id/radioVerde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/verde" />

        <RadioButton
            android:id="@+id/radioNaranjaVerde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naranjaverde2" />

        <RadioButton
            android:id="@+id/radioNaranjaRojo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naranjarojo" />

        <RadioButton
            android:id="@+id/radioRojoVerde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rojoverde" />
    </RadioGroup>

    <TextView
        android:id="@+id/fechaCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/bebidaDentro"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>

     
