<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioOpcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codigoradio" />

        <RadioButton
            android:id="@+id/radioNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreradio09" />

        <RadioButton
            android:id="@+id/radioAgente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agenteradio87" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/txtBusqueda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.57"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/txtxBusqueda" >

            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/btn_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.57"
            android:src="@drawable/abc_ic_search_api_holo_light" android:contentDescription="@string/Nacimiento"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
