<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.itla.proyectoprogramacion2.ActividadPrincipal$PrimerSegmento"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/txtAutoridad"
            android:layout_width="252dp"
            android:layout_height="match_parent"
            android:layout_gravity="fill_horizontal"
            android:text="@string/autoridad234"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <DigitalClock
        android:id="@+id/digitalClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginRight="17dp"
        android:text="@string/digitalclock67" />

    <TextView
        android:id="@+id/fechaCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="18dp"
        android:text="@string/fechaCita98"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/fechaCitaCharla"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fechaCita"
        android:layout_toRightOf="@+id/fechaCita"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fechaCita"
        android:layout_below="@+id/fechaCita"
        android:layout_marginTop="14dp"
        android:text="@string/lugar56"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignRight="@+id/fechaCitaCharla"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtDireccion34" />

    <TextView
        android:id="@+id/Datosconductor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDireccion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/datosconductor89"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="15dp"
        android:text="@string/dominicano"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Switch
        android:id="@+id/switchLicencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtDireccion"
        android:layout_alignTop="@+id/textView9"
        android:textOff="No"
        android:textOn="Sí" />

    <TextView
        android:id="@+id/documento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView9"
        android:layout_below="@+id/switchLicencia"
        android:text="@string/licencia34"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtDocumento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/documento"
        android:layout_alignBottom="@+id/documento"
        android:layout_toRightOf="@+id/documento"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLugarCita"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/txtDireccion"
        android:text="@string/direccion377"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtLugarCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/Datosconductor"
        android:layout_alignRight="@+id/digitalClock1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lugarhecho78" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/Datosconductor"
        android:layout_marginTop="14dp"
        android:text="@string/nombre907"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/documento"
        android:layout_below="@+id/txtDocumento"
        android:layout_marginTop="14dp"
        android:text="@string/nacionality67"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtNacionalidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignRight="@+id/switchLicencia"
        android:layout_toRightOf="@+id/textView11"
        android:ems="10"
        android:inputType="textPersonName" />

    <Switch
        android:id="@+id/switchNacionalidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtLugarCita"
        android:layout_alignTop="@+id/textView8"
        android:text="@string/Nacimiento"
        android:textOff="No"
        android:textOn="Sí" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_below="@+id/switchNacionalidad"
        android:text="@string/licenciaConducir"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/digitalClock1"
        android:layout_alignBottom="@+id/digitalClock1"
        android:layout_alignRight="@+id/textView5"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCodigo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/datosCita8"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/digitalClock1"
        android:layout_alignBottom="@+id/digitalClock1"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/txtNombreMultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignRight="@+id/switchLicencia"
        android:ems="10"
        android:inputType="textPersonName" />

</RelativeLayout>