<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.itla.proyectoprogramacion2.ActividadPrincipal"
    tools:ignore="MergeRootFrame" >

    <RadioGroup
        android:id="@+id/radioOpcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_registrar"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioOpcion"
        android:layout_centerHorizontal="true"
        android:text="@string/multaregistrar45"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/btn_consultar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/ico_registrar" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_consultar"
        android:layout_centerHorizontal="true"
        android:text="@string/consultarmulta"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/titulogeneral"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/btn_registrar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignLeft="@+id/btn_consultar"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="36dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/ico_registrar" />

</RelativeLayout>